# IBA-Complaint-System

./: .env  .replit  ENV_CONSOLIDATION_SUMMARY.md  ENV_FINAL_CONSOLIDATION.md  ENV_SETUP.md  README.md  load-env.bat  pnpm-lock.yaml  pyproject.toml  setup-dev.ps1
artifacts/api-server/: .env  package.json
artifacts/api-server/src/: app.ts  index.ts
artifacts/flask-backend/: app.py  categories.json  create_tables.py  init_supabase.sql  migration_add_is_approved.sql  setup_db.py
artifacts/mockup-sandbox/: package.json  vite.config.ts
artifacts/work-order-system/: index.html  package.json  requirements.yaml  vite.config.ts
artifacts/work-order-system/.replit-artifact/: artifact.toml
artifacts/work-order-system/src/: App.tsx  index.css
artifacts/work-order-system/src/components/layout/: app-layout.tsx
artifacts/work-order-system/src/hooks/: use-auth.ts  use-categories.ts
artifacts/work-order-system/src/lib/: fetch-interceptor.ts
artifacts/work-order-system/src/pages/: dashboard.tsx  notifications.tsx  users.tsx
artifacts/work-order-system/src/pages/auth/: login.tsx  register.tsx
artifacts/work-order-system/src/pages/work-orders/: create.tsx  detail.tsx  list.tsx
attached_assets/: Pasted-There-are-a-few-issues-with-the-app-and-i-want-you-to-m_1774461050488.txt
lib/api-spec/: openapi.yaml
